# harmony

./: Cargo.toml  README.md
.github/workflows/: rust.yml
crates/common/: Cargo.toml
crates/common/src/: lib.rs  nats.rs  telemetry.rs
crates/core-api/: Cargo.toml
crates/core-api/src/: crypto.rs  errors.rs  lib.rs
crates/harmony/: Cargo.toml
crates/harmony-api/: Cargo.toml
crates/harmony-api/src/: api.rs  channel.rs  channel_manager.rs  client.rs  crypto.rs  encrypted_client.rs  error.rs  events.rs  keystore.rs  lib.rs  models.rs  user.rs  user_manager.rs
crates/harmony-bindings/: Cargo.toml  uniffi.toml
crates/harmony-bindings/src/: client.rs  crypto.rs  encrypted_client.rs  error.rs  lib.rs  managers.rs  models.rs  session.rs
crates/harmony-desktop/: Cargo.toml  README.md  build.rs
crates/harmony-desktop/i18n/: en.json  es.json  fr.json  zh-CN.json
crates/harmony-desktop/src/: api.rs  errors.rs  icons.rs  main.rs  preferences.rs  theme.rs
crates/harmony-desktop/src/api/: account.rs  channel_manager.rs  crypto.rs  keystore.rs  live.rs  mock.rs  mod.rs  user_manager.rs
crates/harmony-desktop/src/media/: codec.rs  mod.rs  screen_capture.rs
crates/harmony-desktop/src/media/audio/: limiter.rs  mod.rs
crates/harmony-desktop/src/media/video/: hardware.rs  mod.rs  software.rs
crates/harmony-desktop/src/views/: login.rs  mod.rs  splash.rs
crates/harmony-desktop/src/views/dialogs/: backend.rs  external_link.rs  mfa.rs  mod.rs  screen_capture.rs  settings.rs  token.rs
crates/harmony-desktop/src/views/main/: call.rs  chat_list.rs  contacts.rs  mod.rs  people_list.rs  sidebar.rs
crates/harmony-desktop/src/views/main/chat_area/: input.rs  messages.rs  mod.rs  top_bar.rs  voice.rs
crates/harmony-desktop/src/widgets/: button.rs  mod.rs  remote_screen.rs  screen_share.rs  styles.rs  video.rs
crates/harmony-types/: Cargo.toml
crates/harmony-types/src/: channels.rs  errors.rs  events.rs  invites.rs  lib.rs  messages.rs  users.rs  voice.rs
crates/harmony/src/: authentication.rs  errors.rs  main.rs  request.rs
crates/harmony/src/methods/: channels.rs  invites.rs  keys.rs  messages.rs  mod.rs  spaces.rs  users.rs  voice.rs  webrtc.rs
crates/harmony/src/services/: encryption.rs  environment.rs  events.rs  mod.rs  nats.rs  permissions.rs  rate_limiter.rs  redis.rs  utilities.rs  voice.rs  webrtc.rs
crates/harmony/src/services/database/: calls.rs  channels.rs  invites.rs  members.rs  messages.rs  mod.rs  spaces.rs  users.rs
crates/pulse/: Cargo.toml  README.md
crates/pulse-api/: Cargo.toml
crates/pulse-api/src/: client.rs  error.rs  events.rs  fragment.rs  lib.rs  media.rs  mls.rs  transport.rs
crates/pulse-protocol/: Cargo.toml
crates/pulse-protocol/src/: client.rs  events.rs  lib.rs  media.rs  mls.rs  transport.rs
crates/pulse-types/: Cargo.toml
crates/pulse-types/src/: fragment.rs  lib.rs
crates/pulse/src/: environment.rs  errors.rs  main.rs  metrics.rs  mls.rs  nats.rs  redis.rs
crates/pulse/src/rtc/: call.rs  peer.rs  udp.rs
crates/pulse/src/socket/: client.rs  events.rs  server.rs
crates/pulse/src/wt/: call.rs  mod.rs
crates/rapid/: Cargo.toml  README.md
crates/rapid/src/: errors.rs  lib.rs  rate_limit.rs  socket.rs  utilities.rs
crates/screen-viewer/: Cargo.toml  README.md
crates/screen-viewer/src/: main.rs  shader.rs
crates/wgpu-capture/: Cargo.toml  README.md
crates/wgpu-capture/src/: error.rs  lib.rs  wgpu_import.rs
crates/wgpu-capture/src/platform/: mod.rs
crates/wgpu-capture/src/platform/linux/: capture.rs  encode.rs  import_vk.rs  mod.rs
crates/wgpu-capture/src/platform/windows/: capture.rs  directx.rs  encode.rs  import_dx12.rs  import_vk.rs  mod.rs
