[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
redis = "1.0.3"
serde = { workspace = true }
ciborium = "0.2.2"
pulse-types = { path = "../pulse-types" }

tracing = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { version = "0.32.0", features = ["rt-tokio", "metrics", "trace"] }
opentelemetry-otlp = { version = "0.32.0", features = ["tonic", "metrics", "trace", "grpc-tonic"] }
tracing-opentelemetry = "0.33.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
