[package]
name = "harmony-api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { workspace = true }
rmp-serde = "1.1.2"
rmpv = { git = "https://github.com/infiniwave/msgpack-rust.git", features = [
    "with-serde",
] }
thiserror = "2.0.12"
url = "2.5"
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-tungstenite = { version = "0.34.0", features = ["tokio-runtime"] }
env_logger = "0.11"
harmony-types = { path = "../harmony-types" }
pulse-types = { path = "../pulse-types" }
dashmap = "6.1.0"
