[package]
name = "harmony-api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", default-features = false, features = [
    "sync",
    "time",
    "rt",
    "macros",
] }
serde = { workspace = true }
thiserror = "2.0.12"
url = "2.5"
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
async-tungstenite = { version = "0.34.1", features = ["tokio-runtime"] }
harmony-types = { path = "../harmony-types" }
pulse-types = { path = "../pulse-types" }
dashmap = "6.1.0"
reqwest = { version = "0.13.2", features = ["json"] }
quick_cache = "0.6.21"
chacha20poly1305 = "0.10"
ml-kem = { version = "0.3.2", features = ["getrandom"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
ed25519-dalek = "2.2"
hkdf = "0.12.3"
sha2 = "0.10.9"
ciborium = "0.2.2"
base64 = "0.22.1"
argon2 = "0.5.3"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
tracing = "0.1"
serde_with = "3.21.0"
