[package]
name = "harmony-bindings"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
uniffi = { version = "0.29.4", features = ["cli"] }
tokio = { version = "1", features = ["rt"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
harmony-api = { path = "../harmony-api" }
