[package]
name = "harmony-bindings"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
uniffi = { version = "0.31.0", features = ["cli"] }
tokio = { version = "1", features = ["rt"] }
thiserror = "2.0.12"
serde = { workspace = true }
harmony-api = { path = "../harmony-api" }
