[package]
name = "harmony-desktop"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
arc-swap = "1.9.1"
async-trait = "0.1.89"
base64 = "0.22.1"
bytes = "1.11.1"
chacha20poly1305 = "0.10"
chrono = "0.4.43"
cpal = { git = "https://github.com/infiniwave/cpal.git", rev = "91dc035" }
emojis = "0.8.2"
hkdf = "0.12.3"
harmony-api = { path = "../harmony-api" }
iced = { git = "https://github.com/infiniwave/iced.git", rev = "29432bd", features = ["canvas", "advanced", "tokio", "svg", "image", "wgpu"] }
iced_aw = { git = "https://github.com/infiniwave/iced_aw.git", rev = "58471e4", features = ["drop_down"] }
keyring = { version = "3.6.3", features = ["windows-native", "apple-native", "sync-secret-service"] }
lru = "0.18.0"
opaque-ke = "4.0.1"
open = "5.3.3"
opus = "0.3.1"
pulse-api = { path = "../pulse-api" }
reqwest = { version = "0.13.2", features = ["json"] }
rkyv = "0.8.15"
rust-i18n = "4.0.0"
serde = { workspace = true }
serde_json = "1.0.149"
sha2 = "0.10.9"
sqlx = "0.8.6"
tokio = { version = "1", features = ["time", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tray-icon = "0.21.3"
ulid = "1.2.1"
vk-video = "0.3.0"
wgpu = "29.0.3"
wgpu-capture = { path = "../wgpu-capture" }
x25519-dalek = "2.0.1"
openh264 = "0.7"
yuv = "0.8.11"
async-stream = "0.3.6"
futures = "0.3"
notify-rust = "4.12.0"
ml-kem = { version = "0.3.2", features = ["getrandom"] }
argon2 = "0.5.3"
quick_cache = "0.6.21"
ringbuf = "0.5.0"

[build-dependencies]
winres = "0.1.12"
