[package]
name = "harmony-desktop"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
arc-swap = "1.9.1"
async-trait = "0.1.89"
base64 = "0.23.0"
bytes = "1.11.1"
chrono = "0.4.43"
cpal = { git = "https://github.com/infiniwave/cpal.git", rev = "91dc035" }
emojis = "0.9.0"
harmony-api = { path = "../harmony-api" }
iced = { git = "https://github.com/infiniwave/iced.git", rev = "29432bd", features = ["canvas", "advanced", "tokio", "svg", "image", "wgpu"] }
iced_aw = { git = "https://github.com/infiniwave/iced_aw.git", rev = "58471e4", features = ["drop_down"] }
keyring-core = "1.0.0"
opaque-ke = "4.0.1"
open = "5.3.3"
opus = "0.3.1"
pulse-api = { path = "../pulse-api" }
reqwest = { version = "0.13.2", features = ["json"] }
rkyv = "0.8.15"
rust-i18n = "4.0.0"
serde = { workspace = true }
serde_json = "1.0.149"
sha2 = "0.11.0"
sqlx = "0.9.0"
tokio = { version = "1", features = ["time", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ulid = "1.2.1"
gpu-video = "0.4.0"
wgpu = "29.0.3"
wgpu-capture = { path = "../wgpu-capture" }
x25519-dalek = "3.0.0"
openh264 = "0.9.7"
yuv = "0.8.11"
async-stream = "0.3.6"
futures = "0.3"
notify-rust = "4.12.0"
argon2 = "0.5.3"
ringbuf = "0.5.0"
serde_cbor_2 = "0.13.0"
core-api = { path = "../core-api" }
dirs = "6.0.0"
sys-locale = "0.3.2"

[build-dependencies]
winres = "0.1.12"
