[package]
name = "harmony-types"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
pulse-types = { path = "../pulse-types" }
mongodb = { version = "3.0.0", optional = true }
redis = { version = "1.0.3", optional = true }
thiserror = "2.0.18"
rapid = { path = "../rapid", optional = true }
rmpv = { git = "https://github.com/infiniwave/msgpack-rust.git", optional = true }

[features]
default = []
server = ["mongodb", "redis", "rapid", "rmpv"]
