[package]
name = "harmony-types"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
pulse-types = { path = "../pulse-types" }
mongodb = { version = "3.0.0", optional = true }
redis = { version = "1.0.3", optional = true }
thiserror = "2.0.18"
rapid = { path = "../rapid", optional = true }
ciborium = { version = "0.2.2", optional = true }
serde_with = "3.21.0"

[features]
default = []
server = ["mongodb", "redis", "rapid", "ciborium"]
