[package]
name = "harmony"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = [
    "macros",
    "rt-multi-thread",
], default-features = false }
async-trait = "0.1.73"
futures-util = "0.3.28"

dashmap = "6.0.0"
lazy_static = "1.4.0"
once_cell = "1.18.0"

chrono = "0.4.26"
rand = "0.9.2"
num_cpus = "1.16.0"
ulid = "1.0.0"

dotenvy = "0.15.7"
env_logger = "0.11.0"
log = "0.4.20"

async-tungstenite = { version = "0.30.0", features = [
    "tokio-runtime",
    "tokio-rustls-webpki-roots",
], default-features = false }

mongodb = "3.0.0"
jsonwebtoken = "9.0.0"
redis = { version = "0.32.4", features = ["tokio-comp"] }

serde = { version = "1.0.183", features = ["derive"] }
rmp-serde = "1.1.2"

aes-gcm = "0.10.2"
flate2 = "1.0.27"
x25519-dalek = "2.0.0"

rapid = { path = "../rapid" }
typetag = "0.2.18"
rmpv = { git = "https://github.com/infiniwave/msgpack-rust.git" }
pulse-api = { path = "../pulse-api" }
async-notify = "0.3.0"
reqwest = { version = "0.13.1", features = ["json"] }
serde_json = "1.0.149"
