[package]
name = "harmony"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = [
    "macros",
    "rt-multi-thread",
], default-features = false }
async-trait = "0.1.73"
futures-util = "0.3.28"

dashmap = "6.0.0"
lazy_static = "1.4.0"
once_cell = "1.18.0"

chrono = "0.4.26"
rand = "0.9.2"
num_cpus = "1.16.0"
ulid = "1.0.0"

dotenvy = "0.15.7"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

mongodb = "3.0.0"
redis = { version = "1.0.3", features = ["tokio-comp", "streams"] }

serde = { version = "1.0.183", features = ["derive"] }
rmp-serde = "1.1.2"
flate2 = "1.0.27"

openmls = "0.7.1"
openmls_rust_crypto = "0.4.1"
openmls_traits = "0.4.1"
tls_codec = "0.4"
openmls_basic_credential = "0.4.1"

rapid = { path = "../rapid" }
rmpv = { git = "https://github.com/infiniwave/msgpack-rust.git" }
common = { path = "../common" }
pulse-types = { path = "../pulse-types" }
reqwest = { version = "0.13.1", features = ["json"] }
serde_json = "1.0.149"
