[package]
name = "pulse-api"
version = "0.1.0"
edition = "2024"

[dependencies]
pulse-types = { path = "../pulse-types" }
wtransport = "0.6.1"
rkyv = { version = "0.8.14", features = ["unaligned"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "sync", "time"], default-features = false }
openmls = "0.7.1"
openmls_rust_crypto = "0.4.1"
openmls_traits = "0.4.1"
openmls_basic_credential = "0.4.1"
tls_codec = "0.4"
anyhow = "1.0.100"
thiserror = "2"
tracing = "0.1.37"
dashmap = "6.1.0"
chacha20poly1305 = { version = "0.10", features = ["std"] }
