[package]
name = "pulse-api"
version = "0.1.0"
edition = "2024"

[dependencies]
pulse-types = { path = "../pulse-types" }
moq-native = "0.18.0"
moq-net = "0.1.16"
url = "2.5"
bytes = "1"
ciborium = "0.2"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "sync", "time"], default-features = false }
openmls = "0.8.1"
openmls_rust_crypto = "0.5.1"
openmls_traits = "0.5.0"
openmls_basic_credential = "0.5.0"
tls_codec = "0.4"
thiserror = "2"
tracing = "0.1.37"
dashmap = "6.1.0"
chacha20poly1305 = "0.11.0"
ed25519-dalek = "3.0.0"
hkdf = "0.13.0"
sha2 = "0.11.0"
serde_with = "3.21.0"
