[package]
name = "pulse"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
rmp-serde = "1.1.2"

futures = "0.3.24"
tokio = { version = "1.45.1", features = [
    "macros",
    "rt-multi-thread",
], default-features = false }

dashmap = "6.1.0"
lazy_static = "1.4.0"
once_cell = "1.18.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

redis = { version = "1.0.3", features = ["tokio-comp", "streams"] }

ulid = "1.1.3"
rand = "0.9.2"
dotenvy = "0.15.7"

pulse-api = { path = "../pulse-api" }
wtransport = "0.6.1"
rkyv = "0.8.14"
anyhow = "1.0.100"
arc-swap = "1.8.0"

openmls = "0.7.1"
openmls_rust_crypto = "0.4.1"
openmls_traits = "0.4.1"
tls_codec = "0.4"
openmls_basic_credential = "0.4.1"
