[package]
name = "pulse"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
rmp-serde = "1.1.2"

futures = "0.3.24"
tokio = { version = "1.45.1", features = [
    "macros",
    "rt-multi-thread",
], default-features = false }

dashmap = "6.1.0"
lazy_static = "1.4.0"
tracing = { workspace = true }
opentelemetry = { workspace = true }

redis = { version = "1.0.3", features = ["tokio-comp", "streams"] }

ulid = "1.1.3"
rand = "0.10.0"
dotenvy = "0.15.7"

common = { path = "../common" }
pulse-types = { path = "../pulse-types" }
wtransport = "0.7.0"
rkyv = { version = "0.8.14", features = ["unaligned"] }
anyhow = "1.0.100"
arc-swap = "1.8.0"

openmls = "0.8.1"
openmls_rust_crypto = "0.5.1"
openmls_traits = "0.5.0"
tls_codec = "0.4"
openmls_basic_credential = "0.5.0"
