[package]
name = "rapid"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", default-features = false }
async-trait = "0.1.73"
futures = "0.3.28"

async-tungstenite = { version = "0.33.0", features = ["tokio-runtime"] }

serde = { workspace = true }
rmp-serde = "1.1.2"
rmpv = { git = "https://github.com/infiniwave/msgpack-rust.git", features = ["with-serde"] }

dashmap = "6.0.0"
rand = "0.10.1"
uuid = "1.17.0"
thiserror = "2.0.18"
tracing = { workspace = true }
opentelemetry = { workspace = true, optional = true }

[features]
default = []
otel = ["opentelemetry"]
