[package]
name = "rapid"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", default-features = false }
async-trait = "0.1.73"
futures = "0.3.28"

async-tungstenite = { version = "0.34.1", features = ["tokio-runtime"] }

serde = { workspace = true }
ciborium = "0.2.2"

dashmap = "6.0.0"
rand = "0.10.0"
uuid = "1.17.0"
thiserror = "2.0.18"
tracing = { workspace = true }
opentelemetry = { workspace = true, optional = true }

[features]
default = []
otel = ["opentelemetry"]
