[package]
name = "wgpu-capture"
version = "0.1.0"
edition = "2024"

[dependencies]
ash = "0.38.0"
thiserror = "2.0.18"
tracing.workspace = true
wgpu = { version = "29.0.3", features = ["wgsl"] }

[target.'cfg(windows)'.dependencies]
crossbeam-queue = "0.3.12"
windows = { version = "0.62.2", features = [
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_Foundation",
    "Win32_Media_MediaFoundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D11on12",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
] }

[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.13.10", features = ["screencast"] }
drm-fourcc = "2.2.0"
pipewire = "0.10.0"
nix = { version = "0.31.2", features = ["ioctl", "fs", "poll", "mman"] }
cros-codecs = { git = "https://github.com/infiniwave/cros-codecs.git", rev = "46f6080", features = ["vaapi", "av1"] }
libva = { git = "https://github.com/infiniwave/cros-libva.git", rev = "62ca98e", package = "cros-libva" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
